Refactor ProfilingWrapper to use a fixed thread pool for accurate CPU profiling; update TaskProfiler to improve CPU time checks and enhance task classification logic