@@ -1,6 +1,7 @@
 package com.autotasks.jar.profiling;
 
 import com.autotasks.jar.thread.SmartTask;
+
 import java.util.concurrent.Executors;
 
 public class ProfilingWrapper implements Runnable {
@@ -12,15 +13,17 @@ public class ProfilingWrapper implements Runnable {
 
     @Override
     public void run() {
-        try (var exec = Executors.newVirtualThreadPerTaskExecutor()) {
+        // ✅ Use platform executor for profiling to measure CPU accurately
+        try (var exec = Executors.newFixedThreadPool(
+                Math.max(2, Runtime.getRuntime().availableProcessors())
+        )) {
             exec.submit(() -> task.runTask()).get();
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
-
-
+    // ✅ Run profiling once and store metadata
     public void profileOnceAndStore() {
         TaskProfiler.profileAndStore(this, task.getTaskName());
     }
